Fix missing skills section. Align illustrations.

--- a/app/assets/stylesheets/monsters.scss
+++ b/app/assets/stylesheets/monsters.scss
@@ -63,4 +63,5 @@ li.attack-line {
   width: 300px; 
   min-height: 300px; 
   border: 1px solid #d4d4d4;
+  text-align: center;
 }
